Made amp request to use test/debug flag and tmax from stored requests